--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - 'worker.js'        # só dispara quando worker.js mudar
-      - 'wrangler.jsonc'   # ou quando a config mudar
+      - 'worker.js'
+      - 'wrangler.jsonc'
 
 jobs:
   deploy:
@@ -17,8 +17,16 @@ jobs:
       - name: 📥 Checkout código
         uses: actions/checkout@v4
 
-      - name: ⚡ Deploy via Wrangler
-        uses: cloudflare/wrangler-action@v3
+      - name: 🔧 Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          node-version: '20'
+
+      - name: 📦 Instalar Wrangler
+        run: npm install -g wrangler
+
+      - name: 🚀 Deploy via Wrangler
+        run: wrangler deploy --config wrangler.jsonc
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
