--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install -g wrangler
 
       - name: 🚀 Deploy via Wrangler
-        run: wrangler deploy --config wrangler.jsonc
+        run: npx wrangler@latest deploy worker.js --config wrangler.jsonc --name moskogas-backend-v2
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
